
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 char* _ (char*) ;
 int printf (char*,...) ;

__attribute__((used)) static void
help(const char *progname)
{
 printf(_("%s removes a PostgreSQL database.\n\n"), progname);
 printf(_("Usage:\n"));
 printf(_("  %s [OPTION]... DBNAME\n"), progname);
 printf(_("\nOptions:\n"));
 printf(_("  -e, --echo                show the commands being sent to the server\n"));
 printf(_("  -i, --interactive         prompt before deleting anything\n"));
 printf(_("  -V, --version             output version information, then exit\n"));
 printf(_("  --if-exists               don't report error if database doesn't exist\n"));
 printf(_("  -?, --help                show this help, then exit\n"));
 printf(_("\nConnection options:\n"));
 printf(_("  -h, --host=HOSTNAME       database server host or socket directory\n"));
 printf(_("  -p, --port=PORT           database server port\n"));
 printf(_("  -U, --username=USERNAME   user name to connect as\n"));
 printf(_("  -w, --no-password         never prompt for password\n"));
 printf(_("  -W, --password            force password prompt\n"));
 printf(_("  --maintenance-db=DBNAME   alternate maintenance database\n"));
 printf(_("\nReport bugs to <pgsql-bugs@lists.postgresql.org>.\n"));
}
